# c2rust-demo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-setup-steps.yml
.github/agents/: generate-rust-ffi.md
.github/workflows/: ci.yml  cjson-coverage.yml  coverage-ci.yml  skill-verify.yml  validate-cjson.yml
docs/: SKILL.md  generate-rust-ffi.md
hook/: hook.c
scripts/: generate-ffi.sh  validate-cjson.sh
src/: capture.rs  layout.rs  main.rs  selector.rs  test_utils.rs
src/split/: feature.rs  file.rs  merge.rs  mod.rs
tests/: integration.rs
tests/fixtures/cjson/: Makefile
tests/fixtures/cov-demo/: Cargo.toml  build.rs
tests/fixtures/cov-demo/src/: lib.rs
